--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!-- Write your HTML in this file -->
 
+
+
 <ul>
-  <li><a href="https://example.com">Flatiron School</a></li>
+  <li><a href="https://flatironschool.com">Flatiron School</a></li>
   <li><a href="mailto:m.bluth@example.com">Email</a></li>
   <li><a href="tel:+123456789">Phone</a></li>
 </ul>
